blocks/header/header.css
/* header and nav layout */
header .nav-wrapper {
  background-color: var(--background-color);
  width: 100%;
  z-index: 2;
  position: fixed;
}

header nav {
  box-sizing: border-box;
  display: grid;
  grid-template:
    'brand hamburger' var(--mobile-nav-height);
  align-items: center;
  margin: auto;
  height: var(--mobile-nav-height);
  padding: 0 1rem;
  font-family: var(--body-font-family);
  background: #000;
}

header nav[aria-expanded="true"] {
  grid-template:
    'brand hamburger' var(--nav-height)
    'sections sections' min-content
    'tools tools' min-content;
    min-height: 100vh;
}

@media (min-width: 600px) {
  header nav {
    padding: 0 15px;
  }
}

@media (min-width: 900px) {
  header nav {
    height: var(--nav-height);
    grid-template:
    'brand hamburger' var(--nav-height);
    display: flex;
    justify-content: space-between;
  }

  header nav[aria-expanded="true"] {
    min-height: 0;
    overflow: visible;
  }
}

header nav p {
  margin: 0;
  line-height: 1;
}

header nav a:any-link {
  color: currentcolor;
}

/* hamburger */
header nav .nav-hamburger {
  grid-area: hamburger;
  display: flex;
  justify-content: flex-end;
}

header nav .nav-hamburger button {
  margin: 0;
  color: black;
  overflow: initial;
  text-overflow: initial;
  white-space: initial;
  padding: 0.25rem 0.75rem;
  font-size: 1.25rem;
  line-height: 1;
  border: 1px solid transparent;
  border-radius: 0.25rem;
}

header nav .nav-hamburger button:focus, header nav .nav-hamburger button:hover {
  background-color: black;
  outline: 5px auto -webkit-focus-ring-color;
}

header nav .nav-hamburger-icon,
header nav .nav-hamburger-icon::before,
header nav .nav-hamburger-icon::after {
  box-sizing: border-box;
  display: block;
  position: relative;
  width: 20px;
}

header nav .nav-hamburger button .nav-hamburger-icon {
  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
  width: 30px;
  height: 30px;
}

header nav[aria-expanded="false"] .nav-hamburger-icon::before {
  top: -6px;
}

header nav[aria-expanded="false"] .nav-hamburger-icon::after {
  top: 6px;
}

header nav[aria-expanded="true"] .nav-hamburger-icon::before,
header nav[aria-expanded="true"] .nav-hamburger-icon::after {
  top: 3px;
  left: 1px;
  transform: rotate(45deg);
  transform-origin: 2px 1px;
  width: 24px;
  height: 2px;
  border-radius: 2px;
}

header nav[aria-expanded="true"] .nav-hamburger-icon::after {
  top: unset;
  bottom: 3px;
  transform: rotate(-45deg);
}

@media (min-width: 900px) {
  header nav .nav-hamburger {
    display: none;
    visibility: hidden;
  }
}

/* brand */
header .nav-brand {
  grid-area: brand;
  font-size: var(--heading-font-size-l);
  line-height: 1;
  color: #f3f3f3;
  font-weight: 600;
}

header .nav-brand a:hover {
  text-decoration: none;
}

header nav .nav-brand img {
  width: 128px;
  height: auto;
}

/* sections */
header nav .nav-sections {
  grid-area: sections;
  flex: 1 1 auto;
  display: none;
  visibility: hidden;
  background-color: var(--overlay-color);
}

header nav[aria-expanded="true"] .nav-sections {
  display: flex;
  visibility: visible;
  justify-content: center;
}

header nav .nav-sections ul  {
  list-style: none;
  padding-left: 0;
  font-size: var(--body-font-size-s);
  font-weight: 500;
  color: #f3f3f3;
}

header nav .nav-sections ul > li {
  font-weight: 700;
}

header nav .nav-sections ul > li > ul {
  margin-top: 0;
}

header nav .nav-sections > ul > li {
  display: flex;
  justify-content: center;
  position: relative;
  font-weight: 600;
  font-size: var(--heading-font-size-l);
  color: #f3f3f3;
  padding: 16px 12px 16px 2px;
  border: none;
  cursor: pointer;
  margin: 0 36px;
}

header nav .nav-sections ul > li > ul > li {
  font-weight: 500;
}

header nav .nav-sections > ul > li > ul {
  display: none;
  position: relative;
}

header nav .nav-sections > ul > li[aria-expanded="true"] > ul {
  display: block;
  position: absolute;
  top: 55px;
  left: 3px;
  min-width: 160px;
  background-color: var(--header-background-color);
  white-space: initial;
  border-top: 2px solid #00aeef;
  z-index: 10;
}

header nav .nav-sections .nav-drop {
  position: relative;
  padding: 16px;
  cursor: pointer;
}

/* tools */
header nav .nav-tools {
  grid-area: tools;
  padding-right: 10px;
  display: flex;
  justify-content: center;
}

.input-search {
  color: #5C5C5C;
  font-size: 20px;
  line-height: 24px;
  text-align: center;
  font-weight: 600;
  padding: 2px 30px 3px;
  display: block;
  margin: 0;
  width: 100%;
  border: 1px solid #707070;
  transition: width 0.4s cubic-bezier(0, 0.795, 0, 1);
}

.input-search:focus {
  width: 100%;
  text-align: left;
  padding-left: 10px;
}

header nav .nav-sections > ul > li > ul > li {
  padding: 12px 16px;
}

@media (min-width: 900px) {
  header nav .nav-sections {
    display: block;
    visibility: visible;
    white-space: nowrap;
  }

  header nav[aria-expanded="true"] .nav-sections {
    justify-content: end;
  }

  header nav .nav-sections .nav-drop[aria-expanded="true"]::after {
    top: unset;
    bottom: .5em;
    transform: rotate(315deg);
  }

  header nav .nav-sections ul {
    display: flex;
    margin: 0;
    font-size: var(--body-font-size-s);
    justify-content: end;
  }

  header nav .nav-sections>ul>li:not(.nav-drop) a {
    text-decoration: none;
  }

  header nav .nav-sections>ul>li>a::before {
    content: "";
    position: absolute;
    left: 0;
    right: 0;
    bottom: 6px;
    background: #00aeef;
    height: 3px;
    width: 0%;
    transform: translateY(4px);
    transition-duration: 0.3s;
    transition-timing-function: ease-out;
  }

  header nav .nav-sections>ul>li>a:hover,
  header nav .nav-sections>ul>li>a:hover::before {
    width: 140%;
    color: #00aeef;
  }

  header nav .nav-sections>ul>li[aria-expanded="true"]>ul a:hover {
    color: var(--link-hover-color);
    text-decoration: none;
  }

  .input-search {
    width: 142px;
  }

  .input-search:focus {
    width: 300px;
  }

}

